--- a/services/adsb-server.service
+++ b/services/adsb-server.service
@@ -5,10 +5,10 @@ Wants=dump1090-fa.service
 
 [Service]
 Type=simple
-User=JLBMaritime
-Group=JLBMaritime
-WorkingDirectory=/home/JLBMaritime/adsb-wifi-manager
-ExecStart=/usr/bin/python3 /home/JLBMaritime/adsb-wifi-manager/adsb_server/adsb_server.py
+User=jlbmaritime
+Group=jlbmaritime
+WorkingDirectory=/home/jlbmaritime/adsb-wifi-manager
+ExecStart=/usr/bin/python3 /home/jlbmaritime/adsb-wifi-manager/adsb_server/adsb_server.py
 Restart=always
 RestartSec=10
 StandardOutput=journal
